force-app/main/default/objects/ccrz__E_PaymentDetail__c/ccrz__E_PaymentDetail__c.object-meta.xml
<CustomObject>
    <description>Holds information for each payment detail associated with the order.  This object should not longer be used for new implementations.  See ccrz__E_TransactionPayment__c.</description>
    <label>CC Payment Detail</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Payment Details Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>