force-app/main/default/objects/ccrz__E_PaymentDetail__c/fields/ccrz__Account_Number__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Account_Number__c</fullName>
    <description>Holds key information regarding the payment method such as po number, gift card number, etc.</description>
    <label>Account Number</label>
    <length>128</length>
    <type>Text</type>
</CustomField>