force-app/main/default/objects/ccrz__E_PaymentDetail__c/fields/ccrz__CC_Order__c.field-meta.xml
<CustomField>
    <fullName>ccrz__CC_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CC Order</label>
    <referenceTo>ccrz__E_Order__c</referenceTo>
    <relationshipLabel>Payment Details</relationshipLabel>
    <relationshipName>E_PaymentDetails</relationshipName>
    <type>Lookup</type>
</CustomField>