force-app/main/default/objects/ccrz__E_PaymentDetail__c/fields/ccrz__Credit_Card_Type__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Credit_Card_Type__c</fullName>
    <label>Credit Card Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Visa</fullName>
            </value>
            <value>
                <fullName>Mastercard</fullName>
            </value>
            <value>
                <fullName>American Express</fullName>
            </value>
            <value>
                <fullName>Discover</fullName>
            </value>
            <value>
                <fullName>Diners Club</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>