force-app/main/default/objects/ccrz__E_PaymentDetail__c/fields/ccrz__Expiration_Year__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Expiration_Year__c</fullName>
    <label>Expiration Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>