force-app/main/default/objects/ccrz__E_PaymentDetail__c/fields/ccrz__Masked_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Masked_Card_Number__c</fullName>
    <label>Masked Card Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>