force-app/main/default/objects/ccrz__E_PaymentDetail__c/fields/ccrz__Payment_Token__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Payment_Token__c</fullName>
    <label>Payment Token</label>
    <length>50</length>
    <type>Text</type>
</CustomField>