force-app/main/default/objects/ccrz__E_PaymentDetail__c/fields/ccrz__Transaction_Code__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Transaction_Code__c</fullName>
    <label>Transaction Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>