force-app/main/default/objects/ccrz__E_PaymentDetail__c/fields/ccrz__Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Transaction_Date__c</fullName>
    <description>Date that the transaction was settled.</description>
    <inlineHelpText>Date that the transaction was settled.</inlineHelpText>
    <label>Transaction Date</label>
    <type>DateTime</type>
</CustomField>