force-app/main/default/objects/ccrz__E_PaymentDetail__c/fields/EC_Card_Holder_Name__c.field-meta.xml
<CustomField>
    <fullName>EC_Card_Holder_Name__c</fullName>
    <label>Card Holder Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>